--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,31 @@
-.App {
+
+.bleu {
+  width: 130px;
+  height: 130px;
+  text-decoration: none;
+  border: #282c34  solid 8px;
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  background-color:rgb(199, 197, 104);
+  padding: 5px
+}
+.rouge {
+  width: 130px;
+  height: 130px;
+  text-decoration: none;
+  border: #282c34  solid 8px;
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  background-color:rgb(154, 240, 166);
+  padding: 5px
+}
+.goofer{
+  width: 50px;
+  height: 50px;
+}
+/* .App {
   text-align: center;
 }
 
@@ -31,3 +58,4 @@
     transform: rotate(360deg);
   }
 }
+ */
